src/intellij-workspace/Sample/src/ozturk/B.java
package ozturk;

import orhn.A;

public class B {
    public void bar()
    {
       // A a = new A(); //error
       // a.foo(); //error
       // a.x = 10; //error
    }
}